Added a heading to history activty

--- a/app/src/main/res/layout/content_history_activty.xml
+++ b/app/src/main/res/layout/content_history_activty.xml
@@ -11,5 +11,9 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.grandilo.qa.HistoryActivty"
     tools:showIn="@layout/activity_history_activty">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Test History"/>
 
 </RelativeLayout>
