--- a/app/src/main/res/layout/content_history_activty.xml
+++ b/app/src/main/res/layout/content_history_activty.xml
@@ -15,5 +15,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Your Test History"/>
+    <ImageView
+        android:id="@+id/web_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
 
 </RelativeLayout>
